# claude-mux

./: CONTEXT.md  README.md  pyproject.toml
docs/: plan.md
docs/adr/: 0001-hybrid-status-source.md  0002-tmux-session-per-project.md  0003-python-textual-stack.md  0004-sessionstart-hook-pane-map.md  0005-encapsulated-single-session.md
docs/contract/: interfaces.md  model.py
src/claude_mux/: __init__.py  __main__.py  activate.py  app.py  config.py  git.py  hooks.py  layouts.py  model.py  panemap.py  picker.py  scrape.py  sessions.py  status.py  tmux.py  treestate.py
tests/: conftest.py  test_activate.py  test_app_labels.py  test_app_quit.py  test_app_smoke.py  test_app_vim.py  test_config_rw.py  test_data_modules.py  test_hooks.py  test_layouts.py  test_panemap.py  test_picker.py  test_project_mgmt.py  test_scrape.py  test_status.py  test_tmux.py  test_tmux_live.py  test_treestate.py
