[project]
name = "claude-mux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brian Keating", email = "brian.keating@enverus.com" }
]
requires-python = ">=3.11"
dependencies = [
    "libtmux>=0.60.0",
    "textual>=8.2.8",
    "tomli-w>=1.2.0",
]

[project.scripts]
claude-mux = "claude_mux.__main__:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
